# bec_docs

./: .gitignore  .readthedocs.yaml  AGENTS.md  README.md  pyproject.toml  zensical.toml
.github/actions/bec_e2e_snippet_tests/: action.yml
.github/workflows/: check_todos.yml  ci.yml  gh_pages_deploy.yml  linting_and_formatting.yml  test_snippets.yml  unit_tests.yml
docs/: index.md
docs/explanation/: documentation-model.md  index.md
docs/explanation/bec-core/: device-manager-event-subscriptions.md  device-proxy-objects.md  file-writers.md  plugin-fetching-and-loading.md  plugin-system.md  redis-connector.md  service-architecture.md
docs/explanation/devices/: lifecycle-hooks.md  subscription-system-and-events.md
docs/explanation/gui/: architecture.md  bec-dispatcher.md  rpc-interface.md  safe-helpers.md  widget-cleanup.md
docs/getting-started/: create-your-first-gui.md  index.md  inspect-a-device.md  load-your-first-config.md  move-a-device.md  open-bec-at-psi.md  open-bec-outside-psi.md  run-your-first-scan.md
docs/getting-started/inspect-a-device/: enabled-devices-and-config-changes.md
docs/how-to/: how-to_template.md  index.md
docs/how-to/automation/: index.md  (+6 more)
docs/javascripts/: beamline-context.js
docs/learn/: index.md
docs/reference/: index.md
docs/references/: index.md
docs/stylesheets/: extra.css
docs/tutorials/: index.md
overrides/partials/: content.html  nav-item.html  toc.html
snippet_tests/: test_getting_started.py
src/bec_docs_pymdown_extensions/: __init__.py  matchers.py  snippet_preprocessor.py  tab_label_icons.py
tests/extension_tests/: preprocessor_test_data.py  test_snippet_preprocessor.py
tests/snippet_tests/: conftest.py  test_getting_started.py  test_how_to.py  test_howto_automation.py  test_howto_devices.py  test_next_steps.py  test_quickstart.py
(+333 files in other folders)
