[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bec-docs"
version = "0.1.0"
description = "Unified BEC documentation"
requires-python = ">=3.11"
dependencies = ["zensical", "mkdocstrings-python", "pymdown-extensions"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/bec_docs_pymdown_extensions"]
include = ["*"]
exclude = ["docs/**", "tests/**"]

[tool.hatch.build.targets.sdist]
packages = ["src/bec_docs_pymdown_extensions"]
include = ["*"]
exclude = ["docs/**", "tests/**"]

[project.entry-points."markdown.extensions"]
snippet_preprocessor = "bec_docs_pymdown_extensions.snippet_preprocessor:make_extension"

[tool.black]
line-length = 100
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["bec_lib", "bec_server", "bec_ipython_client"]

[tool.pytest.ini_options]
markers = [
    "expected_output: attach an expected-output matcher to a docs snippet test",
    "output_capture(mode): choose capture backend for a docs snippet test; supported: 'sys', 'fd', 'manual'",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
skip-magic-trailing-comma = true
